--- a/src/content/tutorial/TutorialTextStyle.css
+++ b/src/content/tutorial/TutorialTextStyle.css
@@ -19,3 +19,8 @@
     font-style: italic;
     color: rgba(0, 0, 0, 0.3);
 }
+
+.button-container {
+    text-align: center;
+    margin-top: 9vh;
+}
