Implement reset and pull exercise, change styles

--- a/src/components/titleBar/TitleBar.css
+++ b/src/components/titleBar/TitleBar.css
@@ -1,4 +1,24 @@
 #title-icon {
     font-size: 3rem;
+    align-self: center;
     color: var(--title-icon-color);
+    height: auto;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+#title-bar {
+    height: 7.5vh;
+    font-size: 1.7em;
+    font-weight: bold;
+    display: flex;
+    padding: 1.5rem;
+    background: var(--light-gray);
+    color: white;
+    margin: 0;
+}
+
+#title {
+    align-self: center;
+    padding-bottom: 5px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
