--- a/src/components/exerciseHelperMenu/ExerciseHelperMenu.css
+++ b/src/components/exerciseHelperMenu/ExerciseHelperMenu.css
@@ -1,6 +1,8 @@
 #task-completed-modal.show-in {
-    -webkit-animation: scale-up-center 0.8s ease-in-out both;
-    animation: scale-up-center 0.8s ease-in-out both;
+    -webkit-animation: scale-up-center 1s ease-in-out both;
+    animation: scale-up-center 1s ease-in-out both;
+    top: 6%;
+    width: 60%;
 }
 
 #task-completed-modal .ui.card.teal {
@@ -20,8 +22,8 @@
 
 @keyframes scale-up-center {
     0% {
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5);
+        -webkit-transform: scale(0.7);
+        transform: scale(0.7);
     }
     100% {
         -webkit-transform: scale(1);
