--- a/src/containers/svgDisplayArea/SVGDisplayArea.css
+++ b/src/containers/svgDisplayArea/SVGDisplayArea.css
@@ -1,6 +1,29 @@
-.svg {
+.svg, .svg-wrapper {
     width: 100%;
     height: 100%;
+}
+
+@-webkit-keyframes finish-exercise {
+    0%, 100% {
+        -webkit-transform: translateY(0);
+    }
+    50% {
+        -webkit-transform: translateY(-10px);
+    }
+}
+
+@keyframes finish-exercise {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+}
+
+.finish-exercise {
+    -webkit-animation: finish-exercise 1s infinite both;
+    animation: finish-exercise 1s infinite both;
 }
 
 svg:not(:root) {
